# shenlan-visual-slam

./: .gitignore  README.md  note.md
HW1/: README.md
HW1/cmake_practice/: CMakeLists.txt
HW2/: README.md  rodrigues_rotation_proof_planetmath.md
HW2/coordinateTransformation/: CMakeLists.txt  coordinate_transformation.cpp
HW2/qrCholeskySolver/: CMakeLists.txt  qr_cholesky_solver.cpp
HW3/: HW3.md
HW3/trajectory/: CMakeLists.txt  draw_trajectory.cpp
HW4/: HW4.md  README.md
HW4/disparity/: CMakeLists.txt  disparity.cpp  gaussnewton.cpp  undistort_image.cpp
HW5/: HW5.md  README.md  traj_est.txt  traj_est_aligned.txt  traj_gt.txt
HW5/code/: CMakeLists.txt  E2Rt.cpp  GN-BA.cpp  ICP.cpp  ICP_pcl.cpp  computeORB.cpp
HW6/: README.md
HW6/code/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp
HW7/: BA.cpp  CMakeLists.txt  README.md  pointcloud.txt  pointcloud_BA.txt
HW7/code/: BA.cpp  CMakeLists.txt  directBA.cpp
HW8/: Q4.md  README.md
